fix(tekton): correct array result expansion syntax for IMAGES param
Remove the extra array wrapping (- prefix) when passing array results.
The syntax `value: $(tasks.X.results.ARRAY[*])` expands directly into
the array parameter, while `value: [- $(tasks.X.results.ARRAY[*])]`
incorrectly wraps the expansion in another array level.

--- a/.tekton/base-image-multiarch-push-pipeline.yaml
+++ b/.tekton/base-image-multiarch-push-pipeline.yaml
@@ -431,9 +431,8 @@ spec:
     - name: ALWAYS_BUILD_INDEX
       value: $(params.build-image-index)
     - name: IMAGES
-      value:
-      # Use compressed image refs from convert-compression
-      - $(tasks.convert-compression.results.IMAGE_REFS[*])
+      # Use compressed image refs from convert-compression (array result expansion)
+      value: $(tasks.convert-compression.results.IMAGE_REFS[*])
     - name: BUILDAH_FORMAT
       value: $(params.buildah-format)
     runAfter:
